tests/algorithms/x/Java/data_structures/kd_tree/tests/test_kdtree.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden222_test_kdtree1692561540/001/Main.java:44: error: incompatible types: LinkedHashMap<String,Object> cannot be converted to Map<String,Double>
            return ((java.util.Map<String,Double>)(new java.util.LinkedHashMap<String, Object>(java.util.Map.ofEntries(java.util.Map.entry("index", (Object)(-1.0)), java.util.Map.entry("dist", (Object)(INF)), java.util.Map.entry("visited", (Object)(0.0))))));
                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden222_test_kdtree1692561540/001/Main.java:59: error: incompatible types: LinkedHashMap<String,Object> cannot be converted to Map<String,Double>
        return ((java.util.Map<String,Double>)(new java.util.LinkedHashMap<String, Object>(java.util.Map.ofEntries(java.util.Map.entry("index", (Object)(((Number)(nearest_idx)).doubleValue())), java.util.Map.entry("dist", (Object)(nearest_dist)), java.util.Map.entry("visited", (Object)(((Number)(visited)).doubleValue()))))));
                                              ^
2 errors
